# paper_viceconte_2021_ral_adherent

./: .gitignore  CITATION.cff  README.md  setup.cfg  setup.py
datasets/: instructions.txt
dockerfiles/: Dockerfile  docker-compose.yml  ignition.yaml  robotology.yaml
scripts/: features_extraction.py  joystick.py  play_generated_trajectory.py  play_retargeted_mocap.py  play_retargeted_mocap_WBGR_vs_KFWBGR.py  plot_Fig_6.py  plot_Fig_7.py  plot_Fig_8.py  plot_trajectory_control_data.py  retargeting.py  training.py  trajectory_control.py  trajectory_generation.py
src/adherent/MANN/: utils.py
src/adherent/MANN/patches/: AdamWParameter.patch  ExpertWeights.patch  Gating.patch  MANN.patch
src/adherent/data_processing/: features_extractor.py  motion_data.py  motion_data_retargeter.py  utils.py  xsens_data_converter.py
src/adherent/model/iCubGazeboSimpleCollisionsV2_5_xsens/: iCubGazeboSimpleCollisionsV2_5_xsens.urdf  model.config
src/adherent/trajectory_control/: trajectory_controller.py  utils.py
src/adherent/trajectory_generation/: joystick_device.py  trajectory_generator.py  utils.py
