# SPDX-FileCopyrightText: Fondazione Istituto Italiano di Tecnologia
# SPDX-License-Identifier: BSD-3-Clause

[metadata]
name = adherent
version = 1.0
description = Human-driven whole-body reference generator and controller.
author = Paolo Maria Viceconte
author_email = paolo.viceconte@iit.com
license = BSD-3-Clause
license_file = LICENSE
url = https://github.com/ami-iit/paper_viceconte_2021_ral_adherent

[options]
zip_safe = False
packages = find:
package_dir =
    =src
python_requires = >=3.6
install_requires =
    gym-ignition @ git+https://github.com/robotology/gym-ignition.git@2e9344c87ca37460e261f6c25f8a6af244a0cfa8
    manifpy @ git+https://github.com/artivis/manif.git@287c71e271c6299cf330daa82dd9ce0166f81c87
    matplotlib==3.5.1
    numpy==1.22.2
    scipy==1.8.0
    wget==3.2
    tensorboard==2.8.0
    tensorflow==2.8.0
    protobuf==3.19.4
    wget==3.2

[options.packages.find]
where = src
